--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,15 +1,13 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand">User Data</a>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" routerLink="users">All Users</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="teams">Teams</a>
-          </li>
-        </ul>
+<!-- A simple navbar to navigate between team and users data -->
+  <header>
+    <nav>
+      <div class="Users">
+        <button class="btn btn-light" routerLink="">All Users</button>
       </div>
-    </div>
-  </nav>
+      <span>User Data Assignment</span>
+      <div class="Team">
+        <button class="btn btn-light" routerLink="teams">Team</button>
+      </div>
+    </nav>
+  </header>
+  
