--- a/src/app/components/teams/teams.component.css
+++ b/src/app/components/teams/teams.component.css
@@ -10,6 +10,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 20px 30px 0px;
+    border: 0;
   }
 
   .card img{
