--- a/src/app/components/users-display/users-display.component.css
+++ b/src/app/components/users-display/users-display.component.css
@@ -1,54 +1,64 @@
-
-.search-controls{
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    margin-top: 20px;
+.search-controls {
+  margin-top: 20px;
+}
+.search-controls button{
+  width: fit-content;
+  margin: 10px 10px;
 }
 
-.search-controls input{
-    margin: 10px 10px;
-}
-.search-controls select{
-    margin: 10px 10px;
-}
-
- .card-deck {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: stretch;
-    padding: auto;
-  }
+.search-controls input {
+  width: fit-content;
+  margin: 10px 10px;
   
-  .card {
-    flex: 1 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+}
+.search-controls select {
+  width: fit-content;
+  margin: 10px 10px;
+}
 
-  .card img{
-    margin: 5px 0px;
-    border: 1px solid rgb(179, 179, 179);
-    border-radius: 50%;
-    width: 20%;
-  }
+h2{
+  text-align: center;
+  text-decoration: underline;
+}
 
-  .card-body{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+.card-deck {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  margin-top: 50px;
+}
 
-  .page-controls{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px 10px;
-  }
+.card {
+  flex: 1 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 20px 30px 0px;
+  border: 0;
+}
 
-  .page-controls button{
-    margin: 0px 10px;
-  }
+.card img {
+  margin: 5px 0px;
+  border: 1px solid rgb(179, 179, 179);
+  border-radius: 50%;
+  width: 20%;
+}
+
+.card-body {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.page-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 10px;
+}
+
+.page-controls button {
+  margin: 0px 10px;
+}
