fixed error with home page

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <header>
     <nav>
       <div class="Users">
-        <button class="btn btn-light" routerLink="">All Users</button>
+        <button class="btn btn-light" routerLink="/">All Users</button>
       </div>
       <span>User Data Assignment</span>
       <div class="Team">
